--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Fab_Bottom_app_bar"
         tools:targetApi="31">
         <activity
+            android:name=".TableActivity"
+            android:exported="true" />
+        <activity
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
